--- a/src/components/CartParts/TableCart/TableCart.css
+++ b/src/components/CartParts/TableCart/TableCart.css
@@ -49,6 +49,8 @@
     font-weight: bold;
     color: black;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .cart-table-row-p2{
