--- a/src/components/CartParts/TableCart/TableCart.css
+++ b/src/components/CartParts/TableCart/TableCart.css
@@ -49,7 +49,7 @@
     font-weight: bold;
     color: black;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: initial;
     overflow: hidden;
 }
 
