--- a/src/components/CartParts/TableCart/TableCart.css
+++ b/src/components/CartParts/TableCart/TableCart.css
@@ -45,7 +45,7 @@
 
 .cart-table-row-p{
     margin: 0.2rem;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     text-align:start;
     text-transform: capitalize;
     font-weight: bold;
@@ -57,7 +57,7 @@
 
 .cart-table-row-p2{
     margin: 0.2rem;
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     text-align:start;
     text-transform: capitalize;
     font-weight: normal;
@@ -67,7 +67,7 @@
 .cart-table-row-p3{
     margin: 0.2rem;
     width: 1rem;
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     text-align:center;
     text-transform: capitalize;
     font-weight: bold;
@@ -88,7 +88,7 @@
     margin: 0.2rem;
     width: auto;
     height: 2rem;
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     text-align:center;
     border-radius: 0.5rem;
 }
@@ -131,6 +131,19 @@
         font-size: 0.8rem;
     }
 
+    .cart-table-row-p2{
+        font-size: 0.8rem;
+    }
+
+    .cart-table-row-p3{
+        font-size: 0.8rem;
+    }
+
+    .cart-table-button{
+
+        font-size: 0.8rem;
+    }
+
 }
 
 /* 992px < width, DESKTOP*/
@@ -141,6 +154,19 @@
     }
 
     .cart-table-row-p{
+        font-size: 1rem;
+    }
+
+    .cart-table-row-p2{
+        font-size: 1rem;
+    }
+
+    .cart-table-row-p3{
+        font-size: 1rem;
+    }
+
+    .cart-table-button{
+
         font-size: 1rem;
     }
 
